--- a/src/assets/styles/general.scss
+++ b/src/assets/styles/general.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -6,4 +7,9 @@
 }
 body{
     font-family: 'Roboto', sans-serif;
+}
+.container{
+    width: 60%;
+    margin: 0 auto;
+    max-width: 1170px;
 }
